--- a/views/student/courseInner.ejs
+++ b/views/student/courseInner.ejs
@@ -13,6 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/css/student/innercourse.css" />
   <link rel="stylesheet" href="/css/student/home.css" />
+  <link rel="stylesheet" href="/css/student/teamForm.css" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -66,7 +67,6 @@
   <header>
     <!-- Navigation -->
     <%- include("./nav.ejs") %>
-
   </header>
   <main>
     <section id="course-inner">
@@ -143,7 +143,8 @@
             <% if (submissions) { %>
               <% submissions.forEach(submission=> { %>
                 <div>
-                  <h3><i class="far fa-pen-to-square"></i>
+                  <h3>
+                    <i class="far fa-pen-to-square"></i>
                     <%= submission.title %>
                   </h3>
                   <p>Description: <%= submission.description %>
@@ -171,18 +172,68 @@
                 <p>Description: <%= project.description %>
                 </p>
               </div>
+              <div class="enroll-btn">
+                <button class="blue" href="#" onclick="toggleForm()">Form a team</button>
+                <a class="blue" href="#">View details</a>
+              </div>
               <% }); %>
                 <% } else { %>
                   <p>No projects</p>
                   <% } %>
-        </div>
-        <div class="enroll-btn">
-          <a class="blue" href="#">Form a team</a>
-          <a class="blue" href="#">View details</a>
+                    <div class="add-project">
+                      <div class="add-project-form" id="project" style="display: none;">
+                        <form id="project-form">
+                          <fieldset>
+                            <legend><span class="number">1</span> Project Info</legend>
+
+                            <label for="title">Project title:</label>
+                            <input type="text" id="name" />
+
+                            <label for="teamLeader">Team Leader name:</label>
+                            <input type="text" id="teamLeader" name="teamLeader" />
+                          </fieldset>
+                          <fieldset>
+                            <legend><span class="number">2</span> Project details</legend>
+
+                            <label for="description">Description:</label>
+                            <textarea id="description" name="description"
+                              style="resize: none; height: 150px"></textarea>
+                            <div>
+                              <label for="teamMember">Team member 1:</label>
+                              <select name="teamMember" id="teamMember">
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                              </select>
+                            </div>
+                            <div>
+                              <label for="teamMember">Team member 2:</label>
+                              <select name="teamMember" id="teamMember">
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                              </select>
+                            </div>
+                          </fieldset>
+
+                          <button type="submit" id="submit">Submit</button>
+                          <button type="reset" id="clear">Clear</button>
+                        </form>
+                      </div>
+                    </div>
         </div>
       </div>
     </section>
   </main>
+  <!-- Display the team form -->
+  <script>
+    function toggleForm() {
+      const formSection = document.getElementById("project");
+      formSection.style.display = formSection.style.display === "none" ? "block" : "none";
+    }
+  </script>
 </body>
 
 </html>
