--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/student/home.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/student/home.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
@@ -16,177 +16,80 @@
 <body>
   <%- include("./nav.ejs") %>
     <main>
-      <!-- Mian Body Section -->
+      <!-- Main Body Section -->
       <div class="main_body">
         <div class="container">
-          <div class="cover">
-            <img src="images/c1.jpg" alt="">
-          </div>
-
           <div class="main_details">
-            <div class="c_title">
-              <h2>Web Development Course</h2>
-              <span>Price: <b>$300</b></span>
+            <div class="left-card">
+              <h1>Latest updates</h1>
+              <div class="update-details">
+                <h2>Dr. essam added new Material</h2>
+                <p class="update-type">New Content: Useful links</p>
+                <p class="update-description">
+                  Description: Dear students, I've uploaded new useful material
+                  to help you with your project. Best of luck.
+                </p>
+              </div>
+              <div class="buttons">
+                <button class="btn1">View details</button>
+                <button class="btn2">Go to course</button>
+              </div>
+              <div class="update-details">
+                <h2>Dr. Ashraf added new Submission</h2>
+                <p class="update-type">New Content: Submission</p>
+                <p class="update-description">
+                  Description: Dear students, Submission for phase 1 is
+                  available now for your project. Best of luck.
+                </p>
+                <p class="update-deadline">Deadline: 23/6/2023</p>
+              </div>
+              <div class="buttons">
+                <button class="btn1">View details</button>
+                <button class="btn2">Go to course</button>
+              </div>
             </div>
           </div>
-
-          <div class="course_outline">
-            <div class="course">
-              <i class="fab fa-html5"></i>
-              <h5>html & css</h5>
-            </div>
-            <div class="course">
-              <i class="fab fa-js-square"></i>
-              <h5>javascript</h5>
-            </div>
-            <div class="course">
-              <i class="fab fa-react"></i>
-              <h5>react.js</h5>
-            </div>
-            <div class="course">
-              <i class="fab fa-node"></i>
-              <h5>node.js</h5>
-            </div>
-            <div class="course">
-              <i class="fas fa-code"></i>
-              <h5>.net</h5>
-            </div>
-          </div>
-
-          <div class="description">
-            <h5>Description</h5>
-            <div class="des_para">
-              <p>Web development is the work involved in developing a website for the Internet or an intranet. Web
-                development can range from developing a simple single static page of plain text to complex web
-                applications, electronic businesses, and social network services. <br> <br> Web developers create and
-                maintain websites. They are also responsible for the site's technical aspects, such as its performance
-                and
-                capacity, which are measures of a website's speed and how much traffic the site can handle. In addition,
-                web developers may create content for the site</p>
-              <img src="/images/c2.jpeg" alt="">
-            </div>
-          </div>
-          <div class="buttons">
-            <button class="btn1">Enrol Now</button>
-            <button class="btn2"> <i class="fas fa-heart"></i>Add to favourite</button>
-          </div>
-
         </div>
-
-        <!-- Sidebar Reviews Section -->
+        <!-- Sidebar Requests Section -->
         <div class="sidebar">
           <div class="row">
-            <h2>Reviews</h2>
-            <a href="#">See all</a>
+            <h2>Requests</h2>
           </div>
-
-          <div class="review">
-            <div class="details">
-              <div class="logo">
-                <img src="images/c3.jpeg" alt="">
+          <div class="requests">
+            <div class="card">
+              <div class="details">
+                <h3>Request from: Dalia</h3>
+                <p>Project: algo</p>
               </div>
-              <div class="title">
-                <h2>Smith David</h2>
-                <span>1 day ago</span>
-              </div>
-            </div>
-            <div class="review_post">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum vero consectetur expedita numquam
-                accusantium necessitatibus. Sit accusantium nobis assumenda.</p>
-            </div>
-          </div>
-
-          <div class="review">
-            <div class="details">
-              <div class="logo">
-                <img src="/images/c4.jpeg" alt="">
-              </div>
-              <div class="title">
-                <h2>Elyana Gomiz</h2>
-                <span>1 day ago</span>
+              <div class="buttons">
+                <button class="accept-btn">Accept</button>
+                <button class="reject-btn">Reject</button>
               </div>
             </div>
-            <div class="review_post">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum vero consectetur expedita numquam
-                accusantium necessitatibus. Sit accusantium nobis assumenda.</p>
+            <div class="card">
+              <div class="details">
+                <h3>Request from: Farid</h3>
+                <p>Project: Web</p>
+              </div>
+              <div class="buttons">
+                <button class="accept-btn">Accept</button>
+                <button class="reject-btn">Reject</button>
+              </div>
             </div>
           </div>
-
-          <div class="review">
-            <div class="details">
-              <div class="logo">
-                <img src="/images/c5.jpg alt=">
-              </div>
-              <div class="title">
-                <h2>Sam Jhon</h2>
-                <span>1 day ago</span>
-              </div>
-            </div>
-            <div class="review_post">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum vero consectetur expedita numquam
-                accusantium necessitatibus. Sit accusantium nobis assumenda.</p>
-            </div>
-          </div>
-
-          <div class="review">
-            <div class="details">
-              <div class="logo">
-                <img src="/images/c6.jpeg" alt="">
-              </div>
-              <div class="title">
-                <h2>Salina David</h2>
-                <span>1 day ago</span>
-              </div>
-            </div>
-            <div class="review_post">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum vero consectetur expedita numquam
-                accusantium necessitatibus. Sit accusantium nobis assumenda.</p>
-            </div>
-          </div>
-
-          <div class="review">
-            <div class="details">
-              <div class="logo">
-                <img src="./images/c4.jpeg" alt="">
-              </div>
-              <div class="title">
-                <h2>Smith David</h2>
-                <span>1 day ago</span>
-              </div>
-            </div>
-            <div class="review_post">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum vero consectetur expedita numquam
-                accusantium necessitatibus. Sit accusantium nobis assumenda.</p>
-            </div>
-          </div>
-
-          <div class="review">
-            <div class="details">
-              <div class="logo">
-                <img src="/images/c4.jpeg" alt="">
-              </div>
-              <div class="title">
-                <h2>Elyana Gomiz</h2>
-                <span>1 day ago</span>
-              </div>
-            </div>
-            <div class="review_post">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum vero consectetur expedita numquam
-                accusantium necessitatibus. Sit accusantium nobis assumenda.</p>
-            </div>
-          </div>
+          <a href="#">See all</a>
         </div>
       </div>
       <section class="jokes">
-        <p>Chuck Norris Jokes</p>
-        <div id="cnjokes">
+        <div class="jokes-card">
+          <p>Chuck Norris Jokes</p>
+          <div id="cnjokes"></div>
+          <button id="generate">Generate</button>
         </div>
-        <button id="generate">Generate</button>
-
       </section>
     </main>
-    <!-- footer  -->
 
+    <!-- footer  -->
     <footer>
       <div class="copywrite">
         <p>Copyright @2023 All rights reserved</p>
@@ -197,6 +100,7 @@
         </div>
       </div>
     </footer>
+
     <script>
       let menu = document.getElementById("profileMenu");
 
@@ -213,15 +117,17 @@
         }
       });
 
-      //nav on scroll
-      onscroll = () => {
-        if (window.scrollY > 5) {
-          document.getElementById("nav").classList.add("scroll");
+      // Nav on scroll
+      window.onscroll = function () {
+        var navbar = document.getElementById("nav");
+        if (window.pageYOffset > 5) {
+          navbar.classList.add("scroll");
         } else {
-          document.getElementById("nav").classList.remove("scroll");
+          navbar.classList.remove("scroll");
         }
       };
-      //search
+
+      // Search
       const search = document.querySelector(".search");
       const btn = document.querySelector(".btn");
       const input = document.querySelector(".input");
@@ -231,7 +137,8 @@
         input.focus();
       });
     </script>
-    <!-- Jokes APi -->
+
+    <!-- Jokes API -->
     <script>
       const generateButton = document.getElementById("generate");
       const jokesContainer = document.querySelector("#cnjokes");
