--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -8,17 +8,16 @@
           <li><a href="/student">Home</a></li>
           <li><a href="/student/courses">Courses</a></li>
           <li class="dropdown">
-            <a href="" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
+            <a href="#" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-content">
               <% if (courses.length> 0) { %>
                 <% courses.forEach((course)=> { %>
-                  <a href="<%= user._id %>/courseInner/<%= course._id %>">
-                    <%=course.title %>
+                  <a href="/<%= user._id %>/courseInner/<%= course._id %>">
+                    <%= course.title %>
                   </a>
                   <% }); %>
                     <% } %>
             </div>
-
           </li>
         </ul>
         <div class="search">
