--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -23,7 +23,7 @@
             <div class="left-card">
               <h1>Latest updates</h1>
               <div class="update-details">
-                <h2>Dr. essam added new Material</h2>
+                <h2><%= courseTitles.instructorId %> added new Material</h2>
                 <p class="update-type">New Content: Useful links</p>
                 <p class="update-description">
                   Description: Dear students, I've uploaded new useful material
