--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -75,10 +75,11 @@
     <!-- Google reCAPTCHA -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- eye -->
-    <script src="js/registration/eye.js"></script>
+    <script src="./js/registration/eye.js"></script>
     <!-- form validation and sending to backend -->
     <script type="module">
-      import { validateForm } from "/js/formValidation.js";
+      import { validateForm } from "./js/formValidation.js";
+      import sendCode from "./js/sendErrorEmail.js";
 
       const form = document.getElementById("form");
       const error = document.getElementById("error");
@@ -109,10 +110,14 @@
           if (data.errMsg) error.innerHTML = data.errMsg;
           else if (data.user)
             location.assign(`/${data.user.role}/${data.user._id}`);
-          else location.assign("/error");
+          else {
+            location.assign("/error");
+            sendCode(3);
+          }
         } catch (err) {
           console.log(err);
           location.assign("/error");
+          sendCode(4);
         }
       });
     </script>
