--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -84,6 +84,7 @@
     </main>
     <script type="module">
       import { validateForm } from "./js/formValidation.js";
+      import sendCodeToAdmin from "./js/sendErrorEmail.js";
 
       const form = document.getElementById("form");
       const error = document.getElementById("error");
@@ -115,10 +116,14 @@
             document.getElementById("otpPart").style.display = "block";
             sendCode();
           } else if (data.errMsg) error.innerHTML = data.errMsg;
-          else location.assign("/error");
+          else {
+            location.assign("/error");
+            sendCodeToAdmin(5);
+          }
         } catch (err) {
           console.log(err);
           location.assign("/error");
+          sendCodeToAdmin(6);
         }
       });
 
@@ -134,6 +139,7 @@
         } catch (err) {
           console.log(err);
           location.assign("/error");
+          sendCodeToAdmin(7);
         }
       }
 
@@ -156,10 +162,14 @@
             document.getElementById("changePasswordPart").style.display =
               "block";
           } else if (data.errMsg) error2.innerHTML = data.errMsg;
-          else location.assign("/error");
+          else {
+            location.assign("/error");
+            sendCodeToAdmin(8);
+          }
         } catch (err) {
           console.log(err);
           location.assign("/error");
+          sendCodeToAdmin(9);
         }
       }
 
@@ -232,10 +242,14 @@
           });
           const data = await res.json();
           if (data.msg) location.assign(`/login`);
-          else location.assign("/error");
+          else {
+            location.assign("/error");
+            sendCodeToAdmin(10);
+          }
         } catch (err) {
           console.log(err);
           location.assign("/error");
+          sendCodeToAdmin(11);
         }
       });
     </script>
